--- a/corporate2/index.html
+++ b/corporate2/index.html
@@ -126,70 +126,24 @@
                     <h4 class="subtitle">会社情報</h4>
                     <div class="title-line"></div>
                 </div>
-                <table class="info">
-                    <tr>
-                        <td>会社名</td>
-                        <td class="no-sp">ウェブエンターテイメントデザイン株式会社</td>
-                    </tr>
-                    <tr>
-                        <td class="no-pc"></td>
-                        <td class="no-pc">ウェブエンターテイメントデザイン株式会社</td>
-                    </tr>
-                    <tr>
-                        <td class="th">所在地</td>
-                        <td class="no-sp">東京都渋谷区桜丘町99-9 West Building 3F</td>
-                    </tr>
-                    <tr>
-                        <td class="no-pc"></td>
-                        <td class="no-pc">東京都渋谷区桜丘町99-9 West Building 3F</td>
-                    </tr>
-                    <tr>
-                        <td class="th">代表</td>
-                        <td class="no-sp space">XXXXX</td>
-                    </tr>
-                    <tr>
-                        <td class="no-pc"></td>
-                        <td class="no-pc space">XXXXX</td>
-                    </tr>
-                    <tr>
-                        <td class="th">設立</td>
-                        <td class="no-sp">2021年1月1日</td>
-                    </tr>
-                    <tr>
-                        <td class="no-pc"></td>
-                        <td class="no-pc">2021年1月1日</td>
-                    </tr>
-                    <tr>
-                        <td class="th">資本金</td>
-                        <td class="no-sp">3,000,000円</td>
-                    </tr>
-                    <tr>
-                        <td class="no-pc"></td>
-                        <td class="no-pc">3,000,000円</td>
-                    </tr>
-                    <tr>
-                        <td class="th">事業内容</td>    
-                        <td class="no-sp line-height">Web制作・マーケティング
-                            <br>
-                            インターネットメディア事業
-                            <br>
-                            プロモーション企画・制作
-                            <br>
-                            ソーシャル企画・運営
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="no-pc"></td>    
-                        <td class="no-pc line-height">Web制作・マーケティング
-                            <br>
-                            インターネットメディア事業
-                            <br>
-                            プロモーション企画・制作
-                            <br>
-                            ソーシャル企画・運営
-                        </td>
-                    </tr>                    
-                </table>
+                <dl class="info">
+                    <dt>会社名</dt>
+                    <dd>ウェブエンターテイメントデザイン株式会社</dd>
+                    <dt>所在地</dt>
+                    <dd>東京都渋谷区桜丘町99-9 West Building 3F</dd>
+                    <dt>代表</dt>
+                    <dd class="space">XXXXX</dd>
+                    <dt>設立</dt>
+                    <dd>2021年1月1日</dd>
+                    <dt>資本金</dt>
+                    <dd>3,000,000円</dd>
+                    <dt>事業内容</dt>
+                    <dd>Web制作・マーケティング
+                    <br>インターネットメディア事業
+                    <br>プロモーション企画・制作
+                    <br>ソーシャル企画・運営
+                </dd>
+                  </dl>
             </div>
             <div>
                 <img class="company-picture" src="image/Mask group3.png" alt="company写真">
