--- a/choujuku-body/index.html
+++ b/choujuku-body/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="gallery02">
         <div class="swiper">
-            <div class="base-slide">
-                <div class="slide-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv01_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
-                <p class="base-picture-p">余計なものはいれない。</p>
-            </div>
             <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slide-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv01_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
+                    <p class="base-picture-p">余計なものはいれない。</p>
+                </div>
                 <div class="swiper-slide">
                     <div class="slide-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv02_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
                     <div class="outline">
