--- a/portfolio/profile.html
+++ b/portfolio/profile.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body>
+<body class="profile">
     <header class="profile-header">
         <h1>MyProfile</h1>
         <div class="profile-nav">
@@ -23,7 +23,9 @@
     <a name="about"><section class="profile-about"></a>
         <h2 class="title">About</h2>
         <div class="about-content">
-            <img src="image/works/S__69746693.jpg">
+            <div class="selfie">
+                <img src="image/works/S__69746693.jpg">
+            </div>
             <div>
                 <p class="profile-name">Ryo Koyama</p>
                 <ul class="my-info">
@@ -47,7 +49,7 @@
             </div>
             <div class="works-img-width">
                 <img src="image/food.jpg">
-                <p>仙台で食べた非常に美味しかった牛タンのひつまぶしの写真</p>
+                <p>仙台で食べたすごく美味しかった牛タンのひつまぶしの写真</p>
             </div>
         </div>
     </section>
