--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,7 +27,7 @@
         <div class="top-img">
             <img src="image/main.png">
         </div>
-        <a name="works"><section class="works"></a>
+        <section class="works" id="works">
             <h2 class="title">WORKS</h2>
             <div class="works-img">
                 <div class="img-width">
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </section>
-        <a name="skill"><section class="skill"></a>
+        <section class="skill" id="skill">
             <h2 class="title">SKILL</h2>
             <div class="skill-img">
                 <div class="skill-content">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </section>
-        <a name="about"><section class="about"></a>
+        <section class="about" id="about">
             <h2 class="title">ABOUT</h2>
             <div class="about-img">
                 <div class="selfie">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </section>
-        <a name="contact"><section class="contact"></a>
+        <section class="contact" id="contact">
             <h2 class="title">CONTACT</h2>
             <p>お問い合わせは、
                 <br>
