--- a/portfolio/profile.html
+++ b/portfolio/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="profile-html">
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
     <div class="profile-top">
         <img src="image/sauna.jpg">
     </div>
-    <a name="about"><section class="profile-about"></a>
+    <section class="profile-about" id="about">
         <h2 class="title">About</h2>
         <div class="about-content">
             <div class="selfie">
@@ -36,7 +36,7 @@
             </div>
         </div>
     </section>
-    <a name="works"><section class="profile-works"></a>
+    <section class="profile-works" id="works">
         <h2 class="title">Works</h2>
         <div class="works-content">
             <div class="works-img-width">
